// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration DynamicMessage should display case "one" 1`] = `
<span class="msg-switch"><!----> <!----> <span class="msg-case">
      default one
    </span>
<!---->
<!----></span>
`;

exports[`Integration DynamicMessage should display custom case "two" 1`] = `
<span class="msg-switch"><span class="msg-case">
    custom two
  </span>
<!---->
<!---->
<!---->
<!----></span>
`;

exports[`Integration DynamicMessage should display custom wildcard message for "unknown" 1`] = `
<span class="msg-switch"><!----> <!----> <!----> <!----> <span class="msg-case">
      default wildcard (unknown)
    </span></span>
`;

exports[`Integration DynamicMessage should display dynamic case for "dyn" 1`] = `
<span class="msg-switch"><!----> <span class="msg-case">
    dynamic message
  </span>
<!---->
<!---->
<!----></span>
`;

exports[`Integration DynamicOverriddenWildcard should display case "one" 1`] = `
<span class="msg-switch"><!----> <!----> <!----> <span class="msg-case">
      default one
    </span>
<!---->
<!----></span>
`;

exports[`Integration DynamicOverriddenWildcard should display custom case "two" 1`] = `
<span class="msg-switch"><span class="msg-case">
    custom two
  </span>
<!---->
<!---->
<!---->
<!---->
<!----></span>
`;

exports[`Integration DynamicOverriddenWildcard should display custom wildcard message for "unknown" 1`] = `
<span class="msg-switch"><!----> <!----> <span class="msg-case">
      custom wildcard [unknown]
    </span>
<!---->
<!---->
<!----></span>
`;

exports[`Integration DynamicOverriddenWildcard should display dynamic case for "dyn" 1`] = `
<span class="msg-switch"><!----> <span class="msg-case">
    dynamic message
  </span>
<!---->
<!---->
<!---->
<!----></span>
`;

exports[`Integration ObjectCode should display case "one" 1`] = `
<span class="msg-switch"> <span class="msg-case">
    default one
  </span>
<!---->
<!----></span>
`;

exports[`Integration OverriddenMessage should display case "one" 1`] = `
<span class="msg-switch"><!----> <span class="msg-case">
      default one
    </span>
<!---->
<!----></span>
`;

exports[`Integration OverriddenMessage should display custom case "two" 1`] = `
<span class="msg-switch"><span class="msg-case">
    custom two
  </span>
<!---->
<!---->
<!----></span>
`;

exports[`Integration OverriddenMessage should display wildcard case for "dyn" 1`] = `
<span class="msg-switch"><!----> <!----> <!----> <span class="msg-case">
      default wildcard (dyn)
    </span></span>
`;

exports[`Integration OverriddenMessage should display wildcard message for "unknown" 1`] = `
<span class="msg-switch"><!----> <!----> <!----> <span class="msg-case">
      default wildcard (unknown)
    </span></span>
`;

exports[`Integration OverriddenWildcard should display case "one" 1`] = `
<span class="msg-switch"><!----> <!----> <span class="msg-case">
      default one
    </span>
<!---->
<!----></span>
`;

exports[`Integration OverriddenWildcard should display custom case "two" 1`] = `
<span class="msg-switch"><span class="msg-case">
    custom two
  </span>
<!---->
<!---->
<!---->
<!----></span>
`;

exports[`Integration OverriddenWildcard should display custom wildcard case for "dyn" 1`] = `
<span class="msg-switch"><!----> <span class="msg-case">
      custom wildcard [dyn]
    </span>
<!---->
<!---->
<!----></span>
`;

exports[`Integration OverriddenWildcard should display custom wildcard message for "unknown" 1`] = `
<span class="msg-switch"><!----> <span class="msg-case">
      custom wildcard [unknown]
    </span>
<!---->
<!---->
<!----></span>
`;

exports[`Integration StdMessages should display case "one" 1`] = `
<span class="msg-switch"> <span class="msg-case">
      default one
    </span>
<!---->
<!----></span>
`;

exports[`Integration StdMessages should display case "two" 1`] = `
<span class="msg-switch"> <!----> <span class="msg-case">
      default two
    </span>
<!----></span>
`;

exports[`Integration StdMessages should display wildcard case for "dyn" 1`] = `
<span class="msg-switch"> <!----> <!----> <span class="msg-case">
      default wildcard (dyn)
    </span></span>
`;

exports[`Integration StdMessages should display wildcard message for "unknown" 1`] = `
<span class="msg-switch"> <!----> <!----> <span class="msg-case">
      default wildcard (unknown)
    </span></span>
`;
